// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"!!map\\n #123 \\n&anchor # 456\\na: 123" 1`] = `
mapping (4:1 ~ 4:7)
1 | !!map¶
2 | ·#123·¶
3 | &anchor·#·456¶
4 | a:·123¶
  | ^^^^^^
<mapping>
  <tag value="tag:yaml.org,2002:map" />
  <anchor value="anchor" />
  <middleComment value="123 ">
  <middleComment value=" 456">
  <mappingItem>
    <mappingKey>
      <plain value="a" />
    </mappingKey>
    <mappingValue>
      <plain value="123" />
    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`"!!map\\n #123 \\n&anchor # 456\\na: 123" 2`] = `
comment (2:2 ~ 2:7)
1 | !!map¶
2 | ·#123·¶
  |  ^^^^^
3 | &anchor·#·456¶
4 | a:·123¶
<comment value="123 " />
`;

exports[`"!!map\\n #123 \\n&anchor # 456\\na: 123" 3`] = `
comment (3:9 ~ 3:14)
1 | !!map¶
2 | ·#123·¶
3 | &anchor·#·456¶
  |         ^^^^^
4 | a:·123¶
<comment value=" 456" />
`;

exports[`":   " 1`] = `
mapping (1:1 ~ 1:2)
1 | :···¶
  | ^
<mapping>
  <mappingItem>
    <mappingKey>

    </mappingKey>
    <mappingValue>

    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`":   " 2`] = `
mappingItem (1:1 ~ 1:2)
1 | :···¶
  | ^
<mappingItem>
  <mappingKey>

  </mappingKey>
  <mappingValue>

  </mappingValue>
</mappingItem>
`;

exports[`":   " 3`] = `
mappingKey (1:1 ~ 1:1)
1 | :···¶
  | ~
<mappingKey>

</mappingKey>
`;

exports[`":   " 4`] = `
mappingValue (1:1 ~ 1:2)
1 | :···¶
  | ^
<mappingValue>

</mappingValue>
`;

exports[`": 123  " 1`] = `
mapping (1:1 ~ 1:6)
1 | :·123··¶
  | ^^^^^
<mapping>
  <mappingItem>
    <mappingKey>

    </mappingKey>
    <mappingValue>
      <plain value="123" />
    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`": 123  " 2`] = `
mappingItem (1:1 ~ 1:6)
1 | :·123··¶
  | ^^^^^
<mappingItem>
  <mappingKey>

  </mappingKey>
  <mappingValue>
    <plain value="123" />
  </mappingValue>
</mappingItem>
`;

exports[`": 123  " 3`] = `
mappingKey (1:1 ~ 1:1)
1 | :·123··¶
  | ~
<mappingKey>

</mappingKey>
`;

exports[`": 123  " 4`] = `
mappingValue (1:1 ~ 1:6)
1 | :·123··¶
  | ^^^^^
<mappingValue>
  <plain value="123" />
</mappingValue>
`;

exports[`"<<:\\n  a: b" 1`] = `
mapping (1:1 ~ 2:7)
1 | <<:¶
  | ^^^^
2 | ··a:·b¶
  | ^^^^^^
<mapping>
  <mappingItem>
    <mappingKey>
      <plain value="<<" />
    </mappingKey>
    <mappingValue>
      <mapping>
        <mappingItem>
          <mappingKey>
            <plain value="a" />
          </mappingKey>
          <mappingValue>
            <plain value="b" />
          </mappingValue>
        </mappingItem>
      </mapping>
    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`"? 123" 1`] = `
mapping (1:1 ~ 1:6)
1 | ?·123¶
  | ^^^^^
<mapping>
  <mappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>

    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`"? 123" 2`] = `
mappingItem (1:1 ~ 1:6)
1 | ?·123¶
  | ^^^^^
<mappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>

  </mappingValue>
</mappingItem>
`;

exports[`"? 123" 3`] = `
mappingKey (1:1 ~ 1:6)
1 | ?·123¶
  | ^^^^^
<mappingKey>
  <plain value="123" />
</mappingKey>
`;

exports[`"? 123" 4`] = `
mappingValue (1:6 ~ 1:6)
1 | ?·123¶
  |      ~
<mappingValue>

</mappingValue>
`;

exports[`"? a  \\n: 123  \\n? b  \\n: 456  " 1`] = `
mapping (1:1 ~ 4:6)
1 | ?·a··¶
  | ^^^^^^
2 | :·123··¶
  | ^^^^^^^^
3 | ?·b··¶
  | ^^^^^^
4 | :·456··¶
  | ^^^^^
<mapping>
  <mappingItem>
    <mappingKey>
      <plain value="a" />
    </mappingKey>
    <mappingValue>
      <plain value="123" />
    </mappingValue>
  </mappingItem>
  <mappingItem>
    <mappingKey>
      <plain value="b" />
    </mappingKey>
    <mappingValue>
      <plain value="456" />
    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`"? a  \\n: 123  \\n? b  \\n: 456  " 2`] = `
mappingItem (1:1 ~ 2:6)
1 | ?·a··¶
  | ^^^^^^
2 | :·123··¶
  | ^^^^^
3 | ?·b··¶
4 | :·456··¶
<mappingItem>
  <mappingKey>
    <plain value="a" />
  </mappingKey>
  <mappingValue>
    <plain value="123" />
  </mappingValue>
</mappingItem>
`;

exports[`"? a  \\n: 123  \\n? b  \\n: 456  " 3`] = `
mappingItem (3:1 ~ 4:6)
1 | ?·a··¶
2 | :·123··¶
3 | ?·b··¶
  | ^^^^^^
4 | :·456··¶
  | ^^^^^
<mappingItem>
  <mappingKey>
    <plain value="b" />
  </mappingKey>
  <mappingValue>
    <plain value="456" />
  </mappingValue>
</mappingItem>
`;

exports[`"? a  \\n: 123  \\n? b  \\n: 456  " 4`] = `
mappingKey (1:1 ~ 1:4)
1 | ?·a··¶
  | ^^^
2 | :·123··¶
3 | ?·b··¶
4 | :·456··¶
<mappingKey>
  <plain value="a" />
</mappingKey>
`;

exports[`"? a  \\n: 123  \\n? b  \\n: 456  " 5`] = `
mappingKey (3:1 ~ 3:4)
1 | ?·a··¶
2 | :·123··¶
3 | ?·b··¶
  | ^^^
4 | :·456··¶
<mappingKey>
  <plain value="b" />
</mappingKey>
`;

exports[`"? a  \\n: 123  \\n? b  \\n: 456  " 6`] = `
mappingValue (2:1 ~ 2:6)
1 | ?·a··¶
2 | :·123··¶
  | ^^^^^
3 | ?·b··¶
4 | :·456··¶
<mappingValue>
  <plain value="123" />
</mappingValue>
`;

exports[`"? a  \\n: 123  \\n? b  \\n: 456  " 7`] = `
mappingValue (4:1 ~ 4:6)
1 | ?·a··¶
2 | :·123··¶
3 | ?·b··¶
4 | :·456··¶
  | ^^^^^
<mappingValue>
  <plain value="456" />
</mappingValue>
`;

exports[`"? abc\\n? def" 1`] = `
mapping (1:1 ~ 2:6)
1 | ?·abc¶
  | ^^^^^^
2 | ?·def¶
  | ^^^^^
<mapping>
  <mappingItem>
    <mappingKey>
      <plain value="abc" />
    </mappingKey>
    <mappingValue>

    </mappingValue>
  </mappingItem>
  <mappingItem>
    <mappingKey>
      <plain value="def" />
    </mappingKey>
    <mappingValue>

    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`"? abc\\n? def" 2`] = `
mappingItem (1:1 ~ 1:6)
1 | ?·abc¶
  | ^^^^^
2 | ?·def¶
<mappingItem>
  <mappingKey>
    <plain value="abc" />
  </mappingKey>
  <mappingValue>

  </mappingValue>
</mappingItem>
`;

exports[`"? abc\\n? def" 3`] = `
mappingItem (2:1 ~ 2:6)
1 | ?·abc¶
2 | ?·def¶
  | ^^^^^
<mappingItem>
  <mappingKey>
    <plain value="def" />
  </mappingKey>
  <mappingValue>

  </mappingValue>
</mappingItem>
`;

exports[`"? abc\\n? def" 4`] = `
mappingKey (1:1 ~ 1:6)
1 | ?·abc¶
  | ^^^^^
2 | ?·def¶
<mappingKey>
  <plain value="abc" />
</mappingKey>
`;

exports[`"? abc\\n? def" 5`] = `
mappingKey (2:1 ~ 2:6)
1 | ?·abc¶
2 | ?·def¶
  | ^^^^^
<mappingKey>
  <plain value="def" />
</mappingKey>
`;

exports[`"? abc\\n? def" 6`] = `
mappingValue (1:6 ~ 1:6)
1 | ?·abc¶
  |      ~
2 | ?·def¶
<mappingValue>

</mappingValue>
`;

exports[`"? abc\\n? def" 7`] = `
mappingValue (2:6 ~ 2:6)
1 | ?·abc¶
2 | ?·def¶
  |      ~
<mappingValue>

</mappingValue>
`;

exports[`"a:   " 1`] = `
mapping (1:1 ~ 1:3)
1 | a:···¶
  | ^^
<mapping>
  <mappingItem>
    <mappingKey>
      <plain value="a" />
    </mappingKey>
    <mappingValue>

    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`"a:   " 2`] = `
mappingItem (1:1 ~ 1:3)
1 | a:···¶
  | ^^
<mappingItem>
  <mappingKey>
    <plain value="a" />
  </mappingKey>
  <mappingValue>

  </mappingValue>
</mappingItem>
`;

exports[`"a:   " 3`] = `
mappingKey (1:1 ~ 1:2)
1 | a:···¶
  | ^
<mappingKey>
  <plain value="a" />
</mappingKey>
`;

exports[`"a:   " 4`] = `
mappingValue (1:2 ~ 1:3)
1 | a:···¶
  |  ^
<mappingValue>

</mappingValue>
`;

exports[`"a: !!str" 1`] = `
mapping (1:1 ~ 1:9)
1 | a:·!!str¶
  | ^^^^^^^^
<mapping>
  <mappingItem>
    <mappingKey>
      <plain value="a" />
    </mappingKey>
    <mappingValue>
      <plain value="">
        <tag value="tag:yaml.org,2002:str" />
      </plain>
    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`"a: 123  " 1`] = `
mapping (1:1 ~ 1:7)
1 | a:·123··¶
  | ^^^^^^
<mapping>
  <mappingItem>
    <mappingKey>
      <plain value="a" />
    </mappingKey>
    <mappingValue>
      <plain value="123" />
    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`"a: 123  " 2`] = `
mappingItem (1:1 ~ 1:7)
1 | a:·123··¶
  | ^^^^^^
<mappingItem>
  <mappingKey>
    <plain value="a" />
  </mappingKey>
  <mappingValue>
    <plain value="123" />
  </mappingValue>
</mappingItem>
`;

exports[`"a: 123  " 3`] = `
mappingKey (1:1 ~ 1:2)
1 | a:·123··¶
  | ^
<mappingKey>
  <plain value="a" />
</mappingKey>
`;

exports[`"a: 123  " 4`] = `
mappingValue (1:2 ~ 1:7)
1 | a:·123··¶
  |  ^^^^^
<mappingValue>
  <plain value="123" />
</mappingValue>
`;

exports[`"a: 123  \\nb: 456  " 1`] = `
mapping (1:1 ~ 2:7)
1 | a:·123··¶
  | ^^^^^^^^^
2 | b:·456··¶
  | ^^^^^^
<mapping>
  <mappingItem>
    <mappingKey>
      <plain value="a" />
    </mappingKey>
    <mappingValue>
      <plain value="123" />
    </mappingValue>
  </mappingItem>
  <mappingItem>
    <mappingKey>
      <plain value="b" />
    </mappingKey>
    <mappingValue>
      <plain value="456" />
    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`"a: 123  \\nb: 456  " 2`] = `
mappingItem (1:1 ~ 1:7)
1 | a:·123··¶
  | ^^^^^^
2 | b:·456··¶
<mappingItem>
  <mappingKey>
    <plain value="a" />
  </mappingKey>
  <mappingValue>
    <plain value="123" />
  </mappingValue>
</mappingItem>
`;

exports[`"a: 123  \\nb: 456  " 3`] = `
mappingItem (2:1 ~ 2:7)
1 | a:·123··¶
2 | b:·456··¶
  | ^^^^^^
<mappingItem>
  <mappingKey>
    <plain value="b" />
  </mappingKey>
  <mappingValue>
    <plain value="456" />
  </mappingValue>
</mappingItem>
`;

exports[`"a: 123  \\nb: 456  " 4`] = `
mappingKey (1:1 ~ 1:2)
1 | a:·123··¶
  | ^
2 | b:·456··¶
<mappingKey>
  <plain value="a" />
</mappingKey>
`;

exports[`"a: 123  \\nb: 456  " 5`] = `
mappingKey (2:1 ~ 2:2)
1 | a:·123··¶
2 | b:·456··¶
  | ^
<mappingKey>
  <plain value="b" />
</mappingKey>
`;

exports[`"a: 123  \\nb: 456  " 6`] = `
mappingValue (1:2 ~ 1:7)
1 | a:·123··¶
  |  ^^^^^
2 | b:·456··¶
<mappingValue>
  <plain value="123" />
</mappingValue>
`;

exports[`"a: 123  \\nb: 456  " 7`] = `
mappingValue (2:2 ~ 2:7)
1 | a:·123··¶
2 | b:·456··¶
  |  ^^^^^
<mappingValue>
  <plain value="456" />
</mappingValue>
`;

exports[`"a:\\n  b:\\n   #b\\n #a\\n" 1`] = `
mapping (1:1 ~ 4:4)
1 | a:¶
  | ^^^
2 | ··b:¶
  | ^^^^^
3 | ···#b¶
  | ^^^^^^
4 | ·#a¶
  | ^^^
5 | ¶
<mapping>
  <mappingItem>
    <mappingKey>
      <plain value="a" />
    </mappingKey>
    <mappingValue>
      <endComment value="a">
      <mapping>
        <mappingItem>
          <mappingKey>
            <plain value="b" />
          </mappingKey>
          <mappingValue>
            <endComment value="b">
          </mappingValue>
        </mappingItem>
      </mapping>
    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`"def:     456 # hello" 1`] = `
mapping (1:1 ~ 1:21)
1 | def:·····456·#·hello¶
  | ^^^^^^^^^^^^^^^^^^^^
<mapping>
  <mappingItem>
    <mappingKey>
      <plain value="def" />
    </mappingKey>
    <mappingValue>
      <plain value="456">
        <trailingComment value=" hello">
      </plain>
    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`"def:     456 # hello" 2`] = `
mappingItem (1:1 ~ 1:21)
1 | def:·····456·#·hello¶
  | ^^^^^^^^^^^^^^^^^^^^
<mappingItem>
  <mappingKey>
    <plain value="def" />
  </mappingKey>
  <mappingValue>
    <plain value="456">
      <trailingComment value=" hello">
    </plain>
  </mappingValue>
</mappingItem>
`;

exports[`"def:     456 # hello" 3`] = `
mappingKey (1:1 ~ 1:4)
1 | def:·····456·#·hello¶
  | ^^^
<mappingKey>
  <plain value="def" />
</mappingKey>
`;

exports[`"def:     456 # hello" 4`] = `
mappingValue (1:4 ~ 1:21)
1 | def:·····456·#·hello¶
  |    ^^^^^^^^^^^^^^^^^
<mappingValue>
  <plain value="456">
    <trailingComment value=" hello">
  </plain>
</mappingValue>
`;

exports[`"merge:\\n- &A { a: 1 }\\n- &B { b: 2 }\\n- <<: [ *A, *B ]" 1`] = `
sequenceItem (4:1 ~ 4:17)
1 | merge:¶
2 | -·&A·{·a:·1·}¶
3 | -·&B·{·b:·2·}¶
4 | -·<<:·[·*A,·*B·]¶
  | ^^^^^^^^^^^^^^^^
<sequenceItem>
  <mapping>
    <mappingItem>
      <mappingKey>
        <plain value="<<" />
      </mappingKey>
      <mappingValue>
        <flowSequence>
          <flowSequenceItem>
            <alias value="A" />
          </flowSequenceItem>
          <flowSequenceItem>
            <alias value="B" />
          </flowSequenceItem>
        </flowSequence>
      </mappingValue>
    </mappingItem>
  </mapping>
</sequenceItem>
`;

exports[`"x:\\n  - &a\\n    key1: value1\\n  - &b\\n    key2: value2\\nfoo 1`] = `
mappingItem (6:1 ~ 9:9)
1 | x:¶
2 | ··-·&a¶
3 | ····key1:·value1¶
4 | ··-·&b¶
5 | ····key2:·value2¶
6 | foo:¶
  | ^^^^^
7 | ··bar:·baz¶
  | ^^^^^^^^^^^
8 | ··<<:·*a¶
  | ^^^^^^^^^
9 | ··<<:·*b¶
  | ^^^^^^^^
<mappingItem>
  <mappingKey>
    <plain value="foo" />
  </mappingKey>
  <mappingValue>
    <mapping>
      <mappingItem>
        <mappingKey>
          <plain value="bar" />
        </mappingKey>
        <mappingValue>
          <plain value="baz" />
        </mappingValue>
      </mappingItem>
      <mappingItem>
        <mappingKey>
          <plain value="<<" />
        </mappingKey>
        <mappingValue>
          <alias value="a" />
        </mappingValue>
      </mappingItem>
      <mappingItem>
        <mappingKey>
          <plain value="<<" />
        </mappingKey>
        <mappingValue>
          <alias value="b" />
        </mappingValue>
      </mappingItem>
    </mapping>
  </mappingValue>
</mappingItem>
`;

exports[`Implicit map keys need to be followed by map values 1`] = `
"Implicit map keys need to be followed by map values
1 | asd:·123¶
2 | qwe¶
  | ^^^
3 | ¶"
`;
